View image fix and adjusted gap commissions.

--- a/public/gallery.css
+++ b/public/gallery.css
@@ -140,7 +140,8 @@
 }
 
 #altgallery1 img, #altgallery2 img, #altgallery3 img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   max-width: 100%;
   max-height: 50%;
 }
