--- a/public/mediaquery.scss
+++ b/public/mediaquery.scss
@@ -106,7 +106,7 @@
     #Commissions {
         justify-content: center;
         text-align: center;
-        gap: 15px;
+        gap: 35px;
     }
 
     #textbox {
